@@ -412,9 +412,12 @@ print.summary.lm <-
     cat("\n")
     if(nzchar(mess <- naprint(x$na.action))) cat("  (",mess, ")\n", sep = "")
     if (!is.null(x$fstatistic)) {
-	cat("Multiple R-squared: ", formatC(x$r.squared, digits = digits))
-	cat(",\tAdjusted R-squared: ",formatC(x$adj.r.squared, digits = digits),
-	    "\nF-statistic:", formatC(x$fstatistic[1L], digits = digits),
+	cat("Multiple R-squared: ",
+            formatC(x$r.squared, digits = digits, decimal.mark = getOption("OutDec")))
+	cat(",\tAdjusted R-squared: ",
+            formatC(x$adj.r.squared, digits = digits, decimal.mark = getOption("OutDec")),
+	    "\nF-statistic:",
+            formatC(x$fstatistic[1L], digits = digits, decimal.mark = getOption("OutDec")),
 	    "on", x$fstatistic[2L], "and",
 	    x$fstatistic[3L], "DF,  p-value:",
 	    format.pval(pf(x$fstatistic[1L], x$fstatistic[2L],
